@@ -1,0 +1,13 @@
+# Doxer - Software documentation system
+# Copyright (C) 2005-2006 Tim Janik
+#
+# GNU General Public License version 2 or (at your option) any later version.
+#
+## Makefile.am for doxer/
+
+
+clean:
+	rm -f *.pyc
+
+EXTRA_DIST += $(strip		\
+)
