@@ -1,3 +1,7 @@
+Tue Feb 28 01:34:13 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: add build rules here.
+
 Tue Feb 28 00:30:39 2006  Tim Janik  <timj@gtk.org>
 
 	* doxer.py: doxer executable, supports various commands to parse 
